v1.7.0/_sources/L2SIVacuumLib_L2SIVacuum_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 
      -
    * - Target IP address
      - 
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _L2SIVacuum_pragmas:

Pragmas
-------

Total pragmas found: 294
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, Unset
        LCLSVacuumSerialDriverLib, SLAC - LCLS, Unset, Unset
        PMPS, SLAC - LCLS, Unset, Unset
        SysFile, System, , Unset
        Tc2_DataExchange, Beckhoff Automation GmbH, Unset, Unset
        Tc2_EtherCAT, Beckhoff Automation GmbH, Unset, Unset
        Tc2_IoFunctions, Beckhoff Automation GmbH, , Unset
        Tc2_Math, Beckhoff Automation GmbH, , Unset
        Tc2_MC2, Beckhoff Automation GmbH, , Unset
        Tc2_ModbusSrv, Beckhoff Automation GmbH, Unset, Unset
        Tc2_SerialCom, Beckhoff Automation GmbH, , Unset
        Tc2_Standard, Beckhoff Automation GmbH, Unset, Unset
        Tc2_System, Beckhoff Automation GmbH, Unset, Unset
        Tc2_TcpIp, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, Unset
        Tc3_EventLogger, Beckhoff Automation GmbH, Unset, Unset
        Tc3_JsonXml, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Module, Beckhoff Automation GmbH, Unset, Unset
        TcUnit, www.tcunit.org, Unset, Unset

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4395328 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 526755104 (8)
        Constants.bLittleEndian, BOOL, 526753328 (8)
        Constants.bSimulationMode, BOOL, 526753336 (8)
        Constants.CompilerVersion, VERSION, 526755040 (64)
        Constants.CompilerVersionNumeric, DWORD, 526755168 (32)
        Constants.gc_GaugeValidState, INT, 323948656 (16)
        Constants.gc_GaugeValidState, INT, 323933440 (16)
        Constants.gc_iSizeOfGGOArray, INT, 323948640 (16)
        Constants.gc_iSizeOfGGOArray, INT, 323933424 (16)
        Constants.nPackMode, UINT, 526754416 (16)
        Constants.nRegisterSize, WORD, 526754400 (16)
        Constants.RuntimeVersion, VERSION, 526754976 (64)
        Constants.RuntimeVersionNumeric, DWORD, 526755136 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4394848 (32)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4395200 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (85632)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4182848 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4182880 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4395696 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4392792 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4395664 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4395648 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4394640 (16)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4395712 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4395680 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4395744 (2048)


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 323933408 (16)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 315611968 (8321152)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4397792 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 315577920 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 315577856 (64)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4397800 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 4397808 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4397824 (311180032)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 315579968 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4395688 (8)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4394464 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4394592 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4394624 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4394656 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>226 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4185152 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4185056 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4185088 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4184928 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4185024 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4184864 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4185120 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4184896 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4184960 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4184992 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4184736 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4184512 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4184640 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4184704 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4184608 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4184768 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4184800 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4184576 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4184544 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4184672 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4184448 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4184832 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4184416 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4184480 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4185184 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4185216 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4186272 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4186208 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4186304 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4186336 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4186368 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4186400 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4186240 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4184304 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4184240 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4184368 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4184080 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4184352 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4184112 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4184064 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4184192 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4184384 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4184208 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4184224 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4184320 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4184096 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4184288 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4184144 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4184176 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4184256 (16)
        Global_Variables.ADSSTATE_START, UINT, 4184128 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4184160 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4184336 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4184272 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4252000 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4252032 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4250736 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4183776 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097168 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4184000 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4184016 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4183888 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4183808 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4183872 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4183904 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4183824 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4183840 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4183856 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4183920 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4183936 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4183952 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4183968 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4183984 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4183792 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4184048 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4184032 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4186432 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4184408 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097160 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4184400 (8)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4264992 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4265024 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4271296 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4271264 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4271232 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4271328 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4187104 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 323955840 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4391024 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4188728 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4391032 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4391040 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 323955776 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4252608 (128)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4393224 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4392928 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4392800 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4250752 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4187088 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 323934656 (256)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 526754432 (256)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4252096 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4252080 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4252112 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4252128 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4252144 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4252448 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4252224 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4252544 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4252320 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4252512 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4252576 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4252160 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4252192 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4252384 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4252288 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4252416 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4252480 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4252352 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4252256 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4186528 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4186592 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4186560 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4186464 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4186624 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4186496 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4252992 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4252736 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4252064 (16)
        Global_Variables.g_DummyVG, ST_VG, 323933568 (1056)
        Global_Variables.g_DummyVG, ST_VG, 526753344 (1056)
        Global_Variables.g_iSizeOfGGOArray, INT, 526753216 (16)
        Global_Variables.g_iSizeOfGGOArray, INT, 323933456 (16)
        Global_Variables.g_stSystem, ST_System, 526753232 (88)
        Global_Variables.g_stSystem, ST_System, 323933472 (88)
        Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 526753272 (48)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4188736 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4188720 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4188336 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4188704 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4251968 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4250400 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4250432 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4250304 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4250272 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4250240 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4188320 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4250464 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4250592 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4250616 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4250608 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4250728 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4187200 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4250720 (8)
        Global_Variables.nWatchdogTime, BYTE, 4186456 (8)
        Global_Variables.PI, LREAL, 4187136 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4250656 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4250688 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4250624 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4250496 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4186016 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4185376 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4185344 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4250528 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4250560 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4185440 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4185760 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4185728 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4251936 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4185600 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4185408 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4185696 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4185632 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4185472 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4185792 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4185664 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4185536 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4185568 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4185504 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4250336 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4250368 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4185824 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4185248 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4185280 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4185312 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4185888 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4185856 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4185920 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4185984 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4185952 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4186440 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4186448 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4259616 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4259968 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4259552 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4259904 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4259328 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4258480 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4258864 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4259488 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4259840 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4259360 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4259712 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4259424 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4259776 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4187072 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4187056 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4186960 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4186896 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4186912 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4186928 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4186880 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4186944 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4187024 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4186976 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4187008 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4187040 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4186992 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 323948672 (7104)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4186144 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4186048 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4186112 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4186080 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4186176 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4260032 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>15 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_LCLS_Vacuum, ST_LibVersion, 526754688 (288)
        Global_Version.stLibVersion_Tc2_DataExchange, ST_LibVersion, 323956192 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4182912 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4393600 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 323955904 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 323948352 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4393888 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4394176 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4183200 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4183488 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4188416 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4394912 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4395360 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4187744 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 323933120 (288)

.. raw:: html

   </details>
   <br />


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


LCLS_Vacuum_Serial
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_Vacuum_Serial.LCLS_Vacuum.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 323933512 (48)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 323944704 (16)
        PMPS_GVL.cnMaxStateArrayLen, INT, 323939600 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 323941312 (1696)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 323939616 (1696)
        PMPS_GVL.cstSafeBeam, ST_BeamParams, 323943008 (1696)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 323944736 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 323934624 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 323939456 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 323938304 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 323946848 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 323945824 (1024)
        PMPS_GVL.g_cBoundaries, INT, 323945760 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 323944720 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 323939520 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 323939584 (16)
        PMPS_GVL.PERange, PE_Ranges, 323939328 (64)
        PMPS_GVL.reVHyst, REAL, 323945792 (32)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 323936608 (1696)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 323934912 (1696)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 323939552 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 323939392 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 323947872 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 323945776 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 323947904 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 323947968 (384)


PRG_Test
^^^^^^^^

.. raw:: html

   <details>
       <summary>45 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Test.fb_GCC_Test, FB_GCC_Test, 493102720 (33649472)
        PRG_Test.fb_GCC_Test.fb_MKS422.i_iPRESS_R, INT, 526752000 (16)
        PRG_Test.fb_GCC_Test.fb_MKS422.q_xHV_DIS, BOOL, 526752016 (8)
        PRG_Test.fb_GCC_Test.i_iPRESS_R, INT, 526752128 (16)
        PRG_Test.fb_GPI_Test, FB_GPI_Test, 459367040 (33735680)
        PRG_Test.fb_GPI_Test.fb_MKS275.i_iPRESS_R, INT, 493013952 (16)
        PRG_Test.fb_GPI_Test.fb_MKS317.i_iPRESS_R, INT, 493102368 (16)
        PRG_Test.fb_GPI_Test.i_iPRESS_R, INT, 493102656 (16)
        PRG_Test.fb_PIP_Test, FB_PIP_Test, 391980672 (33652480)
        PRG_Test.fb_PIP_Test.fb_PIP_GAMMA.i_iPRESS, INT, 425631120 (16)
        PRG_Test.fb_PIP_Test.fb_PIP_GAMMA.i_xSP_DI, BOOL, 425631136 (8)
        PRG_Test.fb_PIP_Test.fb_PIP_GAMMA.q_xHVEna_DO, BOOL, 425631104 (8)
        PRG_Test.fb_PTM_Test, FB_PTM_Test, 425633152 (33733888)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_iCurrentMon, INT, 459366800 (16)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_iRawSpeed, INT, 459366768 (16)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_iTempMon, INT, 459366784 (16)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xAccel, BOOL, 459366728 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xAtSpd, BOOL, 459366752 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xDecel, BOOL, 459366720 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xNCFault, BOOL, 459366744 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xRotate, BOOL, 459366736 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_iSpeedSet, INT, 459366864 (16)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xProtection, BOOL, 459366840 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xReset, BOOL, 459366832 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xSetSpeed, BOOL, 459366848 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xStart, BOOL, 459366816 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xStop, BOOL, 459366824 (8)
        PRG_Test.fb_PTM_Test.fb_TwisTorr.i_xAtSpd, BOOL, 459278824 (8)
        PRG_Test.fb_PTM_Test.fb_TwisTorr.i_xFault, BOOL, 459278832 (8)
        PRG_Test.fb_PTM_Test.fb_TwisTorr.q_RunDO, BOOL, 459278840 (8)
        PRG_Test.fb_PTM_Test.i_diCurSpd, INT, 459366944 (16)
        PRG_Test.fb_PTM_Test.i_iCurrentMon, INT, 459366992 (16)
        PRG_Test.fb_PTM_Test.i_iRawSpeed, INT, 459366960 (16)
        PRG_Test.fb_PTM_Test.i_iTempMon, INT, 459366976 (16)
        PRG_Test.fb_PTM_Test.q_iSpeedSet, INT, 459366928 (16)
        PRG_Test.fb_VGC_Test, FB_VGC_Test, 324068288 (34264512)
        PRG_Test.fb_VGC_Test.io_fbFFHWO.q_xFastFaultOut, BOOL, 357812840 (8)
        PRG_Test.fb_VGC_Test.VGC.i_xClsLS, BOOL, 357810312 (8)
        PRG_Test.fb_VGC_Test.VGC.i_xOpnLS, BOOL, 357810304 (8)
        PRG_Test.fb_VGC_Test.VGC.q_xOPN_DO, BOOL, 357810320 (8)
        PRG_Test.fb_VRC_Test, FB_VRC_Test, 358332800 (33647872)
        PRG_Test.fb_VRC_Test.VRC.i_xClsLS, BOOL, 391980552 (8)
        PRG_Test.fb_VRC_Test.VRC.i_xOpnLS, BOOL, 391980544 (8)
        PRG_Test.fb_VRC_Test.VRC.q_xOPN_DO, BOOL, 391980560 (8)
        PRG_Test.TotalTests, INT, 323947936 (16)

.. raw:: html

   </details>
   <br />


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4394880 (32)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 526803008 (960)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 526758336 (896)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 526755200 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 526757248 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 526758304 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 526758272 (32)


